--- a/frontend/media.html
+++ b/frontend/media.html
@@ -480,6 +480,7 @@ async function loadNews() {
         <img src="${article.image || 'images/v1_182.png'}" alt="${article.title}">
         <div class="news-caption">
           <h3>${article.title}</h3>
+          <p style="font-size:14px;margin:10px 0;line-height:1.6;text-align:left;">${article.content || ''}</p>
           <p class="news-date">${article.date}</p>
         </div>
       </article>
