Clear order history and add ticket icon SVG for all ticket displays

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -598,7 +598,7 @@ async function loadUpcomingMatch() {
           id: 'ticket_' + match.id,
           name: `Билет: ${match.home_team} vs ${match.away_team}`,
           price: 100,
-          image: 'images/ticket.png',
+          image: 'images/ticket-icon.svg',
           quantity: 1
         });
         alert('Билет добавлен в корзину!');
