--- a/frontend/tickets.html
+++ b/frontend/tickets.html
@@ -521,7 +521,7 @@ function buyTicket(matchId, homeTeam, awayTeam) {
     id: 'ticket_' + matchId,
     name: `Билет: ${homeTeam} vs ${awayTeam}`,
     price: 100,
-    image: 'images/ticket.png'
+    image: 'images/ticket-icon.svg'
   });
   alert('Билет добавлен в корзину!');
 }
