Change all cart/item images to use object-fit: contain for proper display

--- a/frontend/squad.html
+++ b/frontend/squad.html
@@ -165,7 +165,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
@@ -271,7 +271,7 @@ footer{
 .player-card img,.coach-card img{
   width:100%;
   height:280px;
-  object-fit:cover;
+  object-fit:contain;
   display:block;
 }
 .player-info,.coach-info{
