--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -145,7 +145,7 @@ a{
 .item-image{
   width:80px;
   height:80px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
