--- a/frontend/index.html
+++ b/frontend/index.html
@@ -195,7 +195,7 @@ header.site.shrink .brand{display:none}
 .card img{
   width:100%;
   height:230px;
-  object-fit:cover;
+  object-fit:contain;
   display:block;
 }
 .card .caption{
@@ -289,7 +289,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
