--- a/frontend/media.html
+++ b/frontend/media.html
@@ -165,7 +165,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
@@ -270,7 +270,7 @@ footer{
 .news-item img{
   width:100%;
   height:250px;
-  object-fit:cover;
+  object-fit:contain;
   display:block;
 }
 .news-caption{
