--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -130,7 +130,7 @@ footer{
 .product-card img{
   width:100%;
   height:320px;
-  object-fit:cover;
+  object-fit:contain;
   display:block;
 }
 .product-info{
@@ -230,7 +230,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
@@ -496,7 +496,7 @@ async function loadOrders() {
             <div style="font-weight:600; margin-bottom:10px; color:#ddd;">Состав заказа:</div>
             ${order.items.map(item => `
               <div style="display:flex; gap:12px; align-items:center; padding:10px 0; color:#ccc; font-size:14px; border-bottom:1px solid #333;">
-                <img src="${item.product_image || 'images/placeholder.png'}" alt="${item.product_name}" style="width:50px; height:50px; object-fit:cover; border-radius:4px; background:#555;">
+                <img src="${item.product_image || 'images/placeholder.png'}" alt="${item.product_name}" style="width:50px; height:50px; object-fit:contain; border-radius:4px; background:#555;">
                 <div style="flex:1;">
                   <div style="font-weight:600; color:#fff; margin-bottom:4px;">${item.product_name || 'Товар'}</div>
                   ${item.ticket_details ? `<div style="font-size:12px; color:#aaa;">${item.ticket_details}</div>` : ''}
