--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -130,7 +130,7 @@ footer{
 .product-card img{
   width:100%;
   height:320px;
-  object-fit:cover;
+  object-fit:contain;
   display:block;
 }
 .product-info{
@@ -230,7 +230,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
