--- a/frontend/tickets.html
+++ b/frontend/tickets.html
@@ -165,7 +165,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
