--- a/frontend/transfers.html
+++ b/frontend/transfers.html
@@ -165,7 +165,7 @@ footer{
 .cart-item-image{
   width:60px;
   height:60px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:4px;
   background:#fff;
 }
@@ -271,7 +271,7 @@ footer{
 .transfer-player-photo{
   width:120px;
   height:120px;
-  object-fit:cover;
+  object-fit:contain;
   border-radius:8px;
   background:#555;
   flex-shrink:0;
